[package]
name = "elc-proc"
version = "0.1.0"
edition = "2024"
authors = ["Yusuke Matsushita"]
repository = "https://github.com/SoftwareFoundationGroupAtKyotoU/elc"
description = "Procedural macros for Elc"

[dependencies]
proc-macro2 = "1.0.97"
syn = { version = "2.0.104", features = ["full"] }
quote = "1.0.40"

[lib]
proc-macro = true
