[package]
name = "elcc"
version = "0.1.0"
edition = "2024"
authors = ["Yusuke Matsushita <ysk.m24t@gmail.com>"]
description = "Elc compiler based on rustc"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
regex = "1.11.1"
lazy_static = "1.5.0"

[package.metadata.rust-analyzer]
rustc_private = true
